+ NT@MC-QTM: modular arithmetic

--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -132,7 +132,7 @@
 % \def \intr[#set]{\mathring{#set}}
 \def \bdy[#set]{∂ #set}
 
-% Limit
+% Limits
 \definemathcommand [ess] [limop] {\mfunction{ess}}
 \definemathcommand [limsupm] [limop] {\overline{\lim}}
 \definemathcommand [liminfm] [limop] {\underline{\lim}}
@@ -145,8 +145,9 @@
 \definemathcommand [gcd] [nolop] {\mfunction{gcd}}
 \definemathcommand [lcm] [nolop] {\mfunction{lcm}}
 \definemathcommand [dim] [limop] {\mfunction{dim}}
+% \def \congruent[#modulus]{≡_{#modulus}}
 
-% Probabilistic
+% Probability
 \definemathcommand [infinitelyoften] [nolop] {\,\mfunction{i.o.}}
 \definemathcommand [eventually] [nolop] {\,\mfunction{ev}}
 
