--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -176,42 +176,68 @@
 
 % Mathematics
 
+% I have not completely figured out a way to create a dot between \cdot and \bullet
+% The following might provide a way, but is too primitive.
+% The problem is that the scaling is about the bottom of the line.
+\def \argdotsub{\scale[factor=2]{∙}}    % wiki/Command/scale
+\def \argdotmid{\raisebox{0.125em}\vbox{\scale[factor=2]{∙}}}
+\def \argdotsup{\raisebox{0.125em}\vbox{\scale[factor=2]{∙}}}
+% \def \argdot{\raisebox{-0.2em}\vbox{\scale[factor=6]{⋅}}}
+% \def \argdotu{\raisebox{-0em}\vbox{\scale[factor=6]{⋅}}}
+% \def \argdot{\raisebox{-0.2em}\vbox{\scale[factor=6]{⋅}}}
+% \scale[scale=2]{\cdot}} + Z(\scale[sx=3, sy=2]{⋅})
+
 % Caution: spaces do not work between the elements)
 \def \delim[#arguments][#left][#right]{\left#left #arguments \right#right}
 
+% Intervals
 \def \intoo[#arguments]{\delim[#arguments][(][)]}
 \def \intoc[#arguments]{\delim[#arguments][(][]]}
 \def \intco[#arguments]{\delim[#arguments][[][]]}
 \def \intcc[#arguments]{\delim[#arguments][[][]]}
 
+% Brackets
 \def \brnd[#arguments]{\delim[#arguments][(][)]}
 \def \bcrl[#arguments]{\delim[#arguments][\{][\}]}
 \def \bsqr[#arguments]{\delim[#arguments][[][]]}
 
+% Commonly used delimiters
 \def \inn[#arguments]{\delim[#arguments][⟨][⟩]}
 \def \norm[#arguments]{\delim[#arguments][‖][‖]}
 \def \abs[#arguments]{\delim[#arguments][|][|]}
-
 \def \floor[#arguments]{\delim[#arguments][⌊][⌋]}
 \def \ceil[#arguments]{\delim[#arguments][⌈][⌉]}
 
+% Algebra
 \def \linspan[#arguments]{\mfunction{span} \delim[#arguments][\{][\}]}
 \def \inv[#arguments]{#arguments^{-1}}
 
+% Differentials
 \def \d{\,\text{d}}
 \def \D{\,\text{D}}
 
+% Topology
+\def \clsr[#set]{\overline{#set}}
+\def \intr[#set]{{#set}^°}
+% \def \intr[#set]{\mathring{#set}}
+\def \bdy[#set]{∂ #set}
+
+% Limits
 \definemathcommand [ess] [limop] {\mfunction{ess}}
 \definemathcommand [limsupm] [limop] {\overline{\lim}}
 \definemathcommand [liminfm] [limop] {\underline{\lim}}
 
+% Algebra
 \definemathcommand [ker] [nolop] {\mfunction{ker}}
 \definemathcommand [im] [nolop] {\mfunction{im}}
 
+% Arithmetic
 \definemathcommand [gcd] [nolop] {\mfunction{gcd}}
 \definemathcommand [lcm] [nolop] {\mfunction{lcm}}
 \definemathcommand [dim] [limop] {\mfunction{dim}}
+% \def \congruent[#modulus]{≡_{#modulus}}
 
+% Probability
 \definemathcommand [infinitelyoften] [nolop] {\,\mfunction{i.o.}}
 \definemathcommand [eventually] [nolop] {\,\mfunction{ev}}
 
