+ NT@MC-QTM: positional systems, divisibility tests, congruent systems

--- a/math/notes/env-notes.tex
+++ b/math/notes/env-notes.tex
@@ -330,7 +330,7 @@
 	listtext={Exercise }]
 
 \defineenumeration [proof] [mathematicalstatement] [
-	text=Proof,
+	text=Proof.,
 	% title=no,
 	number=no,
 	headstyle=italic,    % This is for "Proof"
