--- a/math/talks/number-theory-mc-qtm-2019.tex
+++ b/math/talks/number-theory-mc-qtm-2019.tex
@@ -66,7 +66,7 @@
 
 \startalign [middle]
 
-	{\tfd Number Theory}
+	{\tfd Number Theory 1}
 
 	\blank[2*line]
 
@@ -164,11 +164,11 @@
 
 	\startitemize [4]
 
-		\item  \emph{Example} 2:  You ask your parent for a candy and (s)he buys it for you. You ask for a fancy shoe, and (s)he buys it. Now you ask for a Lamborghini ⋯.
+		\item  \emph{Example} 2:  You ask your parent for a candy and (s)he buys it for you. You ask for a fancy shoe, and (s)he buys it. Now you ask for a Lamborghini ….
 
 		\item  \emph{Example} 3 (\emph{Black swan}):  In the 16th century, it was believed (in Europe) that swans are always white. But in 1697, Dutch explorers led by Willem de Vlamingh became the first Europeans to see black swans, in Western Australia.
 
-		\item  \emph{Example} 4:  \m{\frac11 = 1, \frac22 = 1, \frac33 = 1, ⋯}; so clearly \m{\frac{n}{n} = 1} for every integer \m{n}.
+		\item  \emph{Example} 4:  \m{\frac11 = 1, \frac22 = 1, \frac33 = 1, …}; so clearly \m{\frac{n}{n} = 1} for every integer \m{n}.
 
 		\item  \emph{Example} 5:  Illusions, e.g. drawings by \emph{M. C. Escher}.
 
@@ -500,7 +500,7 @@
 		
 		\item  From ancient times, humans have been able to identify the natural numbers.
 			
-			In modern mathematics, the \emph{set} of natural numbers is represented by \m{ℕ = \bcrl[1, 2, 3, ⋯]}.
+			In modern mathematics, the \emph{set} of natural numbers is represented by \m{ℕ = \bcrl[1, 2, 3, …]}.
 
 		\item  We can add/subtract, and multiply/divide any two natural numbers.
 
@@ -514,7 +514,7 @@
 				\item  I owed Luci 20 \$, but I have 4 \$ with me. How much do I have?
 			\stopitemize
 
-		\item  This gives rise to the integers, \m{ℤ = \bcrl[⋯, -2, -1, 0, 1, 2, ⋯]}, which are \important{closed} under addition/subtraction.
+		\item  This gives rise to the integers, \m{ℤ = \bcrl[…, -2, -1, 0, 1, 2, …]}, which are \important{closed} under addition/subtraction.
 
 		\item  From now on, we shall forget about subtraction, because subtracting an integer is essentially adding the negative of that integer. 
 	\stopitemize
@@ -703,13 +703,13 @@
 
 		\item  Represent the repeating decimals as rational numbers.
 			\startitemize [a, joinedup]
-				\item  \m{0.2222⋯}
-				\item  \m{42.2888⋯}
-				\item  \m{0.9999⋯}
+				\item  \m{0.2222…}
+				\item  \m{42.2888…}
+				\item  \m{0.9999…}
 
 					\soln{Method 1: \m{n = 0.9 + 0.09 + 0.009 + ⋯ = 0.9(1 + 10^{-1} + 10^{-2} + ⋯) = 0.9 ⋅ \frac{1}{1 - 0.1} = 1}.}
 
-					\soln{Method 2: Let \m{n = 0.9999⋯}. Then \m{10 n = 9.9999⋯}. Subtracting, \m{9 n = 9}, so \m{n = 1}.}
+					\soln{Method 2: Let \m{n = 0.9999…}. Then \m{10 n = 9.9999…}. Subtracting, \m{9 n = 9}, so \m{n = 1}.}
 			\stopitemize
 	\stopitemize
 \stopslide
@@ -978,7 +978,7 @@
 	\stoptheorem
 
 	\startproof
-		Suppose that \m{ℙ = \bcrl[p_1, p_2, ⋯, p_n]} is a set of primes for some \m{n ∈ ℕ}.
+		Suppose that \m{ℙ = \bcrl[p_1, p_2, …, p_n]} is a set of primes for some \m{n ∈ ℕ}.
 
 		Let \m{m = p_1 ⋅ p_2 ⋅ p_3 ⋅ ⋯ ⋅ p_n} and \m{q = m + 1}. Now, \m{q} is either a prime or it is not.
 
@@ -1015,7 +1015,7 @@
 
 		\item  Find a million consecutive composite numbers. Explain your reasoning.
 
-			\comment{Think about \m{1000001! + j}, where \m{j = 2, 3, ⋯, 1000002}.}
+			\comment{Think about \m{1000001! + j}, where \m{j = 2, 3, …, 1000002}.}
 	
 		\item  Consider the following numbers of the form \m{p^2 - 1}, where \m{p} is prime.
 
@@ -1201,16 +1201,12 @@
 		\stopitemize
 	\stopdefinition
 	
-	Exercises: Use the Euclidean algorithm to find the \m{\gcd} of the following
-	\startitemize [m]
-
-		\item  \m{\bcrl[42823, 6409]}
-
-		\item  \m{\bcrl[2 k + 1, k]}
-		
-		\item  \m{\bcrl[7 k + 14, 3 k + 6]}
-		
-		\item  \m{\bcrl[n! + 1, (n + 1)! + 1]}
+	Exercises: Use the Euclidean algorithm to find the \m{\gcd} of the following sets.
+	\startitemize [i, joinedup]
+		\item  \m{\bcrl[42823, 6409]}.
+		\item  \m{\bcrl[2 k + 1, k]}.
+		\item  \m{\bcrl[7 k + 14, 3 k + 6]}.
+		\item  \m{\bcrl[n! + 1, (n + 1)! + 1]}.
 	\stopitemize
 \stopslide
 
@@ -1445,17 +1441,17 @@
 
 			\soln{T (\m{a = b + k n} and \m{c = d + l n} ⟹ \m{ac - bd = ac - ad + ad - bd = a(c - d) + d(a - b)}).}
 
-		\item  (addition)  If \m{a ≡_n b}, then \m{a + c ≡_n b + d}.
+		\item  (addition)  If \m{a ≡_n b}, then \m{a + c ≡_n b + c}.
 			\soln{T (\m{c ≡ c \ (\mod n ).})}
 
-		\item  (multiplication)  If \m{a ≡_n b}, then \m{a c ≡_n b d}.
+		\item  (multiplication)  If \m{a ≡_n b}, then \m{a c ≡_n b c}.
 			\soln{T (\m{c ≡ c \ (\mod n ).})}
 
 		\item  (division)  If \m{a c ≡_n b c}, then \m{a ≡_n b}.
 			\soln{F (\m{2 · 4 ≡_6 2 · 1}, but \m{4 ≢_6 1}).}
 		
 		\item  (exponentiation)  If \m{a ≡_n b}, then \m{a^k ≡_n b^k}.
-			\soln{T (Induction on \m{k}.)}
+			\soln{T (Induction on \m{k} or use the identity: \m{a^k - b^k = (a - b) (a^{k - 1} + a^{k - 2} b + a^{k - 3} b^2 + ⋯ + b^{k - 1})}.)}
 
 	\stopitemize
 \stopslide
@@ -1475,24 +1471,24 @@
 				1^5 + 2^5 + 3^5 + ⋯ + 99^5 + 100^5 .
 			\stopformula
 
+		\item  What is the remainder when the following sum is divided by \m{12}?
+			\startformula
+				1! + 2! + 3! + ⋯ + 99! + 100! .
+			\stopformula
+
 		\item  Prove the following.
-			\startitemize [i, columns, joinedup]
+			\startitemize [i, columns, three, joinedup]
 				\item  \m{39 ∣ \brnd[53^{103} + 103^{53}]}.
 				\item  \m{7 ∣ \brnd[111^{333} + 333^{111}]}.
+				\item  \m{41 ∣ \brnd[2^{20} - 1]}.
+				\item  \m{89 ∣ \brnd[2^{44} - 1]}.
+				\item  \m{97 ∣ \brnd[2^{48} - 1]}.
 			\stopitemize
 
-		\item  For \m{n ∈ ℕ}, use congruence theory to establish each of the following divisibility statements:
+		\item  For \m{n ∈ ℕ}, prove the following divisibility statements:
 			\startitemize [i, columns, joinedup]
 				\item  \m{13 ∣ \brnd[3^{n + 2} + 4^{2 n + 1}]}.
 				\item  \m{7 ∣ \brnd[5^{2 n} + 3 ⋅ 2^{5 n - 2}]}.
-			\stopitemize
-
-		\item  Find all values of \m{x} (in the range \m{0, 1, ⋯ , 9}) that make the following congruences true.
-			\startitemize [i, columns, joinedup]
-				\item  \m{x + 8 ≡_{10} 0}.
-				\item  \m{7 + 3 x ≡_{10} 0}.
-				\item  \m{4 x + 6 ≡_{10} 0}.
-				\item  \m{1 + 8 x ≡_{10} 0}.
 			\stopitemize
 
 	\stopitemize
@@ -1521,7 +1517,8 @@
 	\startexample
 		\startitemize[i, joinedup]
 			\item  Even and odd numbers partition the set of integers. It corresponds to the relation \m{≡_2}.
-			\item  The sets \m{\bcrl[3 k : k ∈ ℤ], \bcrl[3 k + 1: k ∈ ℤ], \bcrl[3 k + 2: k ∈ ℤ]} partition the set of integers. It corresponds to the relation \m{≡_3}.
+			\item  The sets \m{[0] = \bcrl[3 k : k ∈ ℤ], [1] = \bcrl[3 k + 1: k ∈ ℤ], [2] = \bcrl[3 k + 2: k ∈ ℤ]} partition the set of integers. It corresponds to the relation \m{≡_3}.
+			\item  In general, the relation \m{≡_n} generates the partition \m{[0], [1], [2], …, [n - 1]}, where \m{[i] = \bcrl[i + k n: k ∈ ℤ]}.
 		\stopitemize
 	\stopexample
 
@@ -1529,43 +1526,159 @@
 		There is a one-to-one correspondence between equivalence relations and set partitions.
 	\stoptheorem
 
+\stopslide
+
+\startslide [title={Congruence classes}]
+	
+	\startitemize [m]
+		\item  Representation
+		\item  Arithmetic
+	\stopitemize
+
+	% TODO
+\stopslide
+
+\startslide [title={Division}]
+
+	\starttheorem
+		If \m{c a ≡_n c b}, then \m{a ≡_{\frac{n}{d}} b}, where \m{d = \gcd(c, n)}. 
+	\stoptheorem
+
 	\startproof
-		Skip for now.
+		By hypothesis, we can write \m{c(a - b) = ca - cb = kn} for some integer \m{k}. Knowing that \m{\gcd(c, n) = d}, there exist coprime integers \m{r} and \m{s} satisfying \m{c = dr, n = ds}. When these values are substituted in the displayed equation and the common factor \m{d} canceled, the net result is \m{r (a - b) = k s}. Hence, \m{s ∣ r (a - b)} and \m{gcd(r, s) = 1}. Euclid's lemma yields \m{s ∣ (a - b)}, which may be recast as \m{a ≡_s b}; in other words, \m{a ≡_{\frac{n}{d}} b}. 
 	\stopproof
+
+	\startcorollary
+		If \m{c a ≡_n c b} and \m{\gcd(c, n) = 1}, then \m{a ≡_n b}. 
+	\stopcorollary
+
+	\startdefinition
+		Let \m{n ∈ ℕ} and \m{a ∈ ℤ}. Then the \important{multiplicative inverse} of \m{a} modulo \m{n} is an integer \m{x} such that \m{a x ≡_n 1}.
+	\stopdefinition
+
+	Solve the following congruences equations.
+	\startitemize [i, columns, three, joinedup]
+		\item  \m{x + 8 ≡_{10} 0}.
+		\item  \m{3 x ≡_{12} 0}.
+		\item  \m{7 + 3 x ≡_{10} 0}.
+		\item  \m{4 x + 6 ≡_{10} 0}.
+		\item  \m{1 + 8 x ≡_{10} 0}.
+	\stopitemize
+
 \stopslide
 
-\startslide [title={Tests of divisibility: \m{9}}]
+\startslide [title={Positional representations of numbers}]
+	
+	Numbers can be represented in various \important{positional} systems. These usually change the base from \m{10} to another number. Following is a list of commonly used bases. For more information \goto{see the Wikipedia article on positional notation}[url(https://en.wikipedia.org/wiki/Positional_notation)].
 
+	\startitemize [m]
+		
+		\item  Base \m{10} (\goto{decimal}[url(https://en.wikipedia.org/wiki/Decimal_notation)]): Used almost universally by humans (with exceptions).
+
+			Here \m{d_n ⋯ d_2 d_1 d_0 = d_n ⋅ 10^n + ⋯ + d_2 ⋅ 10^2 + d_1 ⋅ 10^1 + d_0 ⋅ 10^0}, where \m{d_i ∈ \bcrl[0, 1, …, 9], i ∈ \bcrl[0, …, n]}.
+
+		\item  Base \m{2} (\goto{binary}[url(https://en.wikipedia.org/wiki/Binary_numeral_system)]): Used to represent information in computers.
+
+			Minimum base required to represent numbers and other information.
+
+			Here \m{d_n ⋯ d_1 d_0 = d_n ⋅ 2^n + ⋯ + d_1 ⋅ 2^1 + d_0 ⋅ 2^0}, where \m{d_i ∈ \bcrl[0, 1], i ∈ \bcrl[0, …, n]}.
+
+		\item  Base \m{16} (\goto{hexadecimal}[url(https://en.wikipedia.org/wiki/Hexadecimal)]): Useful for computing.
+			Here \m{d_n ⋯ d_1 d_0 = d_n ⋅ 16^n + ⋯ + d_1 ⋅ 16^1 + d_0 ⋅ 16^0}, where \m{d_i ∈ \bcrl[0, …, 9, A, …, F], i ∈ \bcrl[0, …, n]}.
+
+		\item  Base \m{8} (\goto{octal}[url(https://en.wikipedia.org/wiki/Octal)]): Useful for computing.
+			Here \m{d_n ⋯ d_1 d_0 = d_n ⋅ 8^n + ⋯ + d_1 ⋅ 8^1 + d_0 ⋅ 8^0}, where \m{d_i ∈ \bcrl[0, …, 7], i ∈ \bcrl[0, …, n]}.
+
+		\item  Base \m{60} (\goto{Babylonian}[url(https://en.wikipedia.org/wiki/Babylonian_numerals)]): Used to write time and angles.
+	\stopitemize
 \stopslide
 
-\startslide [title={Linear congruences}]
+\startslide [title={Tests of divisibility for \emph{decimal} numbers}]
+	
+	\startitemize [m]
+		
+		\item  \important{Test for \m{2}}: The number \m{n} must have \m{0, 2, 4, 6, 8} as the units digit.
 
+			\startproof
+				\m{n = d_n ⋯ d_1 d_0 = 10^n d_n + ⋯ + 10 d_1 + d_0 ≡_{2} d_0}, so \m{2 ∣ n ⟺ 2 ∣ d_0}.
+			\stopproof
+
+		\item  \important{Test for \m{5}}: The number \m{n} must have \m{0, 5} as the units digit.
+
+			\startproof
+				\m{n = d_n ⋯ d_1 d_0 = 10^n d_n + ⋯ + 10 d_1 + d_0 ≡_{5} d_0}, so \m{5 ∣ n ⟺ 5 ∣ d_0}..
+			\stopproof
+
+		\item  \important{Test for \m{3}} (similar for \m{9}): The number \m{n} must have its sum of digits divisbile by \m{3}.
+
+			\startproof
+				\m{n = d_n ⋯ d_1 d_0 = 10^n d_n + ⋯ + 10 d_1 + d_0 ≡_{3} d_n + ⋯ + d_1 + d_0}.
+			\stopproof
+
+		\item  \important{Test for \m{4}} (similar for \m{25}): The number \m{n} must have its last two digits divisible by \m{4}.
+
+			\startproof
+				\m{n = d_n ⋯ d_2 d_1 d_0 = 10^n d_n + ⋯ + 100 d_2 + 10 d_1 + d_0 ≡_{4} d_1 ⋅ 10 + d_0 = d_1 d_0}.
+			\stopproof
+
+		\item  \important{Tests for \m{2^n} and \m{5^n}}: The number \m{n} must have its last \m{n} digits divisible by \m{2^n} and \m{5^n}, respectively. \comment{Key idea: \m{10^n = 2^n 5^n}.}
+
+		\item  \important{Test for \m{11}}: The number \m{n} must have its alternating sum of digits divisible by \m{11}.
+
+			\startproof
+				\m{n = d_n ⋯ d_2 d_1 d_0 = 10^n d_n + ⋯ + 10 d_1 + d_0 ≡_{11} (-1)^n d_n + ⋯ + d_2 - d_1 + d_0}.
+			\stopproof
+
+	\stopitemize
 \stopslide
 
-\startslide [title={The Chinese remainder theorem}]
+\startslide [title={Tests of divisibility for \emph{decimal} numbers}]
+	
+	\startitemize [m]
+		
+		\item  \important{Test for \m{7}}: The difference between twice the units digit of the number \m{n} and the number formed by the rest of the digits is divisible by 7. Repeat to get only one digit left.
+
+			\startproof
+				\m{n = 10 m + d_0 ≡_7 10 m + d_0 - 3 ⋅ 7 ⋅ d_0 = 10 (m - 2 d_0)}.
+			\stopproof
+
+		\item  \important{Test for \m{13}}: The sum of four times the units digit of the number \m{n} and the number formed by the rest of the digits must be divisible by 13. Repeat to get only two digits left.
+
+			\startproof
+				\m{n = 10 m + d_0 ≡_{13} 10 m + d_0 + 3 ⋅ 13 ⋅ d_0 = 10 (m + 4 d_0)}.
+			\stopproof
+	\stopitemize
+\stopslide
+
+\startslide [title={Systems of congruences and the Chinese remainder theorem}]
+	
+	\startexercise [title={Sunzi Suanjing, 3rd-century {\sc ad}}]
+		 There are certain things whose number is unknown. If we count them by threes, we have two left over; by fives, we have three left over; and by sevens, two are left over. How many things are there?
+	\stopexercise
+
+	We shall not see the theorem as it can be confusing. We will see how to apply it. A great explanation of using the Chinese remainder theorem is given in \goto{this video on YouTube}[url(https://www.youtube.com/watch?v=ru7mWZJlRQg)].
+
+	\important{Caution}: For the Chinese remainder theorem to be valid, the moduli must be pairwise coprime.
+
+	\blank
+
+	Solve the following systems of congruences.
+	\startitemize [i, joinedup]
+		\item  \m{x ≡_9 3, x ≡_{10} 7}.
+
+			\comment{Method 1: linear Diophantine equation.}
+
+			\comment{Method 2: Chinese remainder theorem.}
+		\item  \m{x ≡_3 2, x ≡_4 2, x ≡_5 1}.
+		\item  \m{x ≡_5 1, x ≡_7 2, x ≡_9 3, x ≡_{11} 4}.
+		\item  \m{x^3 ≡_{55} 3}. \comment{This can be broken down into \m{x^3 ≡_5 3, x^3 ≡_{11} 3}.}
+	\stopitemize
 
 \stopslide
 
 \stopmode
 
 \stopsection
-
-
-
-\startsection [title={Modular number systems}, reference=sec:modular-number-systems]
-
-\startmode [presentation]
-
-\startslide [title={Modular number systems: \m{ℤ_n}}]
-  
-\stopslide
-
-\stopmode
-
-\stopsection
-
-
-
 
 \stopbodymatter
 
@@ -1578,65 +1691,18 @@
 
 \startbackmatter
 
-\startsubject [title={Appendix}, reference=sub:appendix]
+% \startsubject [title={Appendix}, reference=sub:appendix]
 
-\startmode [presentation]
+% \startmode [presentation]
 
-% \startslide [title={Laplace principle and equivalence to LDP}]
+% \startslide [title={Counting sets}]
 
-% 	\startdefinition [title={Laplace principle}]
-% 		\m{(X_n)} is said to satisfy the \important{Laplace principle on \m{𝓧} with rate function \m{I}} if for all bounded continuous functions \m{h}, we have
-% 		\startformula
-% 			\lim  \frac1n \log 𝔼\exp(-n h(X_n))  =  \inf_𝓧 (h + I)
-% 		\stopformula
-% 	\stopdefinition
-
-% 	\starttheorem
-% 		\m{(X_n)} satisfies LP on \m{𝓧} with rate function \m{I} if and only if \m{(X_n)} satisfies LDP on \m{𝓧} with the same rate function \m{I}.
-% 	\stoptheorem
-
-% 	\bold{Some important results}
-% 	\startitemize [5, nowhite]
-% 		\item  Uniqueness of the rate function.
-% 		\item  Continuity principle.
-% 			% Let \m{f:𝓧 → 𝓨} be a continuous map of Polish spaces. Then \m{(f(X_n))} satisfies Laplace principle with rate function \m{J(y) = \inf \bcrl[I(x): x ∈ {\inv[f]}(y)]}.
-% 		\item  Superexponential approximation preserves Laplace principle.
-% 		  % If \m{(Y_n)} is superexponentially close to \m{(X_n)}, then \m{(Y_n)} satisfies Laplace principle with the same rate function \m{I}.
-% 	\stopitemize
-% \stopslide
-
-% \startslide[title={An application of Schilder theorem}]
-
-% 	\startitemize [4]
-
-% 		\item  \m{W\brnd[C_0 ∖ B_r(0)] = \bcrl[{\norm[B_{\argdotsub}]}_∞ > r]}
-
-% 		\item  \m{\bcrl[{\norm[B_{\argdotsub}]}_∞ > r]}
-% 	\stopitemize
-% \stopslide
-
-% \startslide[title={Using the continuity principle to extend the Schilder theorem}]
-% 	TODO
-% \stopslide
-
-% \startslide [title={Sanov theorem}]
-
-% 	\startitemize [4]
-
-% 		\item  \bold{Aim}: Provide a bound on the probability of observing an atypical sequence of samples from a given probability distribution.
-
-% 		\item
-% 	\stopitemize
 % \stopslide
 
 \startslide
-
 	\startalign [middle]
-
 		\blank[4*line]
-
 		{\tfd Thank you!}
-
 	\stopalign
 \stopslide
 
